# fastapi-news

./: .env  README.md  docker-compose.yml  dump.sql  fastapi commands.txt  main.py  pyproject.toml
core/: db.py  middleware.py  settings.py
core/auth/: router.py  schemas.py  session.py  users.py  utils.py
core/services/: redis.py  redis_.py
migrations/: env.py
migrations/versions/: 0c7db787edf0_user_model_change_for_api.py  128ede69c8fd_user_model_change_for_api.py  1345695dcbd4_first.py  174059cc01c3_user_model_change_for_api.py  9abba2a4a0cc_user_model_change_for_api.py  abcb5ce09dc1_user_model_change_for_api.py  eaf00e4fbe35_create_models_v1.py  f1defed9ea1b_user_model_change_for_api.py
news_app/: models.py
news_app/auth/: views.py
news_app/categories/: views.py
news_app/common/: utils.py  views.py
news_app/news/: test.py  views.py
news_app/utils/: users.py
templates/: base.html  news_list.html
templates/auth/: login.html  signup.html
templates/inc/: _footer.html  _navbar.html  _news_buttons.html  _news_list_news_item.html  _search.html  _sidebar.html
