[tool.poetry]
name = "fastapi-news"
version = "0.1.0"
description = ""
authors = ["night <vanobel159@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_news"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
psycopg2 = "^2.9.5"
fastapi-users = {extras = ["redis", "sqlalchemy"], version = "^10.2.1"}
databases = "^0.6.2"
python-dotenv = "^0.21.0"
jinja2 = "^3.1.2"
asyncpg = "^0.27.0"
asyncio = "^3.4.3"
argon2-cffi = "^21.3.0"
aioredis = "^2.0.1"
aiohttp = "^3.8.3"
itsdangerous = "^2.1.2"
fastapi-sessions = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
